tests/expected_invalid_generic_permit_decl.diag.out
<input>:2:21: error: permit declarations may not be generic
    public permit Access<T>
                        ^
